# IfcMan

./: CMakeLists.txt  main.cpp  taxonomy.cpp  taxonomy.h  util.cpp  util.h
